[package]
name = "deadpool-lettre"
description = "This crate implements a deadpool manager for lettre."
version = "0.0.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
repository = "https://github.com/jdrouet/deadpool-lettre"
edition = "2018"
license = "MIT"
categories = ["email"]
keywords = ["email", "smtp", "pool", "message", "sendmail"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
is-it-maintained-issue-resolution = { repository = "jdrouet/deadpool-lettre" }
is-it-maintained-open-issues = { repository = "jdrouet/deadpool-lettre" }
maintenance = { status = "actively-developed" }

[dependencies]
